fixed overflows

--- a/sass/Repeats.scss
+++ b/sass/Repeats.scss
@@ -6,6 +6,7 @@ a{
     text-decoration: none;
 }
 .navbar {
+    overflow: hidden;
     padding: 2.3125rem 10.125rem;
     a {
         @include mainText;
