--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,8 +1,7 @@
 @import "varuables";
-
 #inspire {
     position: relative;
-
+    overflow: hidden;
     img {
         width: 100%;
     }
